# raytracing

./: .gitignore  CMakeLists.txt  LICENSE  Object.cpp  Object.h  README.md  build_and_run.bat  build_and_run.sh  main.cpp
code/: Datastructure.cpp  Datastructure.h  Graphics.cpp  Graphics.h  Intersection.cpp  Intersection.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Transformation.cpp  Transformation.h
